assets/sass/local.scss
pre {
  white-space: pre-line
}

.preserve-whitespace {
  white-space: pre-line
}

.text-secondary {
  color: $govuk-secondary-text-colour
}

.text-uppercase {
  text-transform: uppercase;
}

.no-wrap-tablet {
  @include govuk-media-query($from: tablet) {
    white-space: nowrap;
  }
}

.no-max-width {
  max-width: none;
}

.filter-toggle {
  @include govuk-media-query($from: desktop) {
    display: none;
  }
}

.inline-list-from-tablet {
  > li {
    @include govuk-media-query($from: tablet) {
      display: inline;
    }
  }
}

.hide-mobile {
  @include govuk-media-query($from: mobile, $until: tablet) {
    display: none;
  }
}

.reset-button {
  appearance: none;
  font-size: inherit;
  font-family: inherit;
  padding: 0;
  margin: 0;
  background: none;
  border: 0 none;
  cursor: pointer;
}

.link-button {
  @extend %govuk-link;
  color: $govuk-link-colour;
  text-align: left;
}

.valign-middle {
  vertical-align: middle;
}

.border {
  border: 1px solid $govuk-border-colour;
}

.border-top {
  border-top: 1px solid $govuk-border-colour;
}

.mid-grey-panel {
  padding: govuk-spacing(1);
  background-color: #CCCFD1;
}

[data-js="focus-on-page-load"]:focus {
  outline: $govuk-focus-width solid $govuk-focus-colour;
  background-color: $govuk-focus-colour;
}

.js-display-block {
  display: none !important;
}

.js-enabled .js-display-block {
  display: block !important;
}

.govuk-word-break-all {
  word-break: break-all;
}

.govuk-share-widget {
  margin-top: 20px;
}

.car-add-another__remove-button {
  float: right;
}

.govuk-summary-list__key {
  vertical-align: top;
}

.govuk-summary-list__value > img {
  max-width: 150px
}

.govuk-body-underlined {
  border-style: solid;
  border-width: 0;
  border-color: gray;
  border-bottom-width: 1px;
  padding-bottom: 5px;
}

.govuk-body-not-underlined {
  border-style: solid;
  border-width: 0;
  border-color: gray;
  padding-bottom: 5px;
  text-decoration: none;
  font-size: 19px;
}

.wrap-reverse {
  display: flex;
  flex-wrap: wrap-reverse;
}

.govuk-text-list {
  display: table;
  width: 100%;
  table-layout: fixed;
  border-collapse: collapse;
  font-size: 1.1875rem;
  line-height: 1.3157894737;

  font-family: "GDS Transport", arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  color: #0b0c0c;
  margin: 0;
  margin-bottom: 20px;

  .govuk-heading-s {
    margin-bottom: unset;
  }

  .govuk-heading-m {
    margin-bottom: unset;
  }

  .govuk-text-list__row {
    display: block;
  }

  .govuk-text-list__key {
    display: inline;
    overflow-wrap: break-word;
    vertical-align: top;
    width: 30%;
  }

  .govuk-text-list__key:after {
    content: ": "
  }

  .govuk-text-list__value {
    display: inline;
    overflow-wrap: break-word;
    margin-inline-start: unset;
  }
}

.govuk-button-as-link {
  align-items: normal;
  background-color: rgba(0, 0, 0, 0);
  border-color: #1d70b8;
  border-style: none;
  box-sizing: content-box;
  color: #1d70b8;
  cursor: pointer;
  display: inline;
  font: inherit;
  height: auto;
  padding: 0;
  perspective-origin: 0 0;
  text-align: start;
  text-decoration: underline;
  transform-origin: 0 0;
  width: auto;
  -moz-appearance: none;
}

.govuk-button-as-link:hover {
  color: #003078;
}

@supports (-moz-appearance:none) {
  .govuk-button-as-link::-moz-focus-inner {
    border: none;
    padding: 0;
  }
  .govuk-button-as-link:focus {
    outline-style: dotted;
    outline-width: 1px;
  }
}

.govuk-icon {
  color: #1d70b8;
  font-size: 0;
  margin-bottom: 30px;
  fill: #1d70b8;
  float: left;
  margin-right: 10px;
}

.govuk-summary-list {
  table-layout: auto;
}

.govuk-summary-list__key {
  width: 30%;
}

.govuk-summary-list__value {
  vertical-align: bottom;
}

// added as an override class
.govuk-summary-list__value_middle {
  vertical-align: middle;
}

.govuk-summary-list__actions {
  width: 4em;
  vertical-align: bottom;
}

.overflow-wrap-anywhere {
  overflow-wrap: anywhere;
}

.width-15-em {
  width: 15em;
}

.width-34-em {
  width: 34em;
}

.white-space-pre {
  white-space: pre-wrap;
}

